--- a/index.html
+++ b/index.html
@@ -1,107 +1,22 @@
 <!DOCTYPE html>
-<html>
-     <head>
-     	<title>HTML Cheat Sheet</title>
-     </head>
-     <body>
-     	<!--heading-->
-     	<h1>Heading One</h1>
-     	<h2>Heading two</h2>
-     	<h3>Heading three</h3>
-     	<h4>Heading four</h4>
-     	<h5>Heading five</h5>
-     	<h6>Heading two</h6>
-     	<!paragraph>
-     		<p>lorem My namne is Ayesha .I read in class five. I love to visit different palce and like to know more about people. <strong>I like to sleeping after eating .</strong>I also fond of <em>I like to sleeping after eating .</em>I like to sleeping after eating .<a href="http://google.com" target="-blank">But it is very harmful for me.</a>These day I am beco mming more cubby.This hurts me a lot. </p>
-     		<ol>
-     		<li>List item 1</li>
-     		<li>List item 2</li>
-     		<li>List item 3</li>
-     		<li>List item 4</li>
-     		<li>List item 5</li>
-     		</ol>
-     		<ul>
-     		<li>List item 1</li>
-     		<li>List item 2</li>
-     		<li>List item 3</li>
-     		<li>List item 4</li>
-     		<li>List item 5</li>
-     		</ul>
-     		<!--table-->
-     		<table>
-     			<thead>
-     				<tr>
-     					<th>Name</th>
-     					<th>Age</th>
-     					<th>Email</th>
-     				</tr>
-     			</thead>
-     			<tr>
-     				<thead>
-     					<tbody>
-     						<tr>
-     							<td>Ayesha Siddika</td>
-     							<td>22</td>
-     							<td>siddika15-14583@diu.edu.bd</td>
-     						</tr>
-     						<tr>
-     							<td>Habiba Borsha </td>
-     							<td>22</td>
-     							<td>habiba1514@gmail.com</td>
-     						</tr>
-     						<tr>
-     							<td>Oishy Islam</td>
-     							<td>22</td>
-     							<td>ariaoishy@gmail.com</td>
-     						</tr>
-     					</tbody>
-     				</thead>
-     			</tr>
-     		</table>
-     		<div style="margin-top:500px"></div>
-     </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Ayesha | Portfolio</title>
+</head>
+<body>
+    <section id ="hero">
+ <div class="hero container">
+     <div>
+         <h1>Hello, My name is Ayesha</h1>
+         ,<a href="#" type="button" class ="cta">Portfolio</a>
+     </div>
+ </div>
+
+
+    </section>   
+</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
